Add comprehensive Ansible monitoring and debugging
Enhanced ansible.cfg:
- Callback plugins: timer, profile_tasks, profile_roles
- Automatic logging to ansible-execution.log
- Color output in logs
- Task timing and performance tracking
- YAML stdout for readability
- 30s task timeouts

Enhanced playbooks:
- 5-stage workflow with progress tracking
- Stage timing (shows duration per stage)
- Clear progress indicators (STAGE 1/5, 2/5, etc.)
- Automatic duration calculation
- Better error messages with context

New documentation:
- ANSIBLE-MONITORING.md with full debugging guide
- Real-time monitoring techniques
- Troubleshooting workflows
- Log analysis commands
- 3-terminal monitoring setup

Test playbook:
- test-gitlab-repo-creation.yml for validation
- Successfully tested with test-repo creation

Features:
✅ Real-time progress display
✅ Task timing reports (auto-generated)
✅ Execution logs (ansible-execution.log)
✅ Stage-based workflow tracking
✅ Verbose output levels (-v through -vvvv)
✅ Step-through mode (--step)
✅ Task preview (--list-tasks)
✅ Resume capability (--start-at-task)

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,67 @@
 [defaults]
+# Inventory and roles
 roles_path = ./ansible/roles:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
 inventory = ./ansible/inventory
 host_key_checking = False
 retry_files_enabled = False
-stdout_callback = yaml
 
+# Output and display
+stdout_callback = yaml
+bin_ansible_callbacks = True
+any_errors_fatal = False
+display_skipped_hosts = True
+display_args_to_stdout = True
+
+# Callback plugins for enhanced monitoring
+callbacks_enabled = ansible.posix.timer, ansible.posix.profile_tasks, ansible.posix.profile_roles
+
+# Logging
+log_path = ./ansible-execution.log
+log_filter = []
+
+# Performance
+forks = 5
+timeout = 30
+gather_timeout = 30
+
+# Diffs and changes
+diff_always = True
+diff_context = 3
+
+# Connection settings
+connect_timeout = 10
+connect_retry_timeout = 10
+
+# Privilege escalation
+become_ask_pass = False
+
+# Color output (even in logs)
+force_color = True
+nocolor = False
+
+[inventory]
+enable_plugins = host_list, script, auto, yaml, ini, toml
+
+[privilege_escalation]
+become = False
+
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+pipelining = True
+control_path = ~/.ansible/cp/ansible-ssh-%%h-%%p-%%r
+
+[colors]
+# Enhanced color scheme for better visibility
+highlight = white
+verbose = blue
+warn = bright purple
+error = red
+debug = dark gray
+deprecate = purple
+skip = cyan
+unreachable = red
+ok = green
+changed = yellow
+diff_add = green
+diff_remove = red
+diff_lines = cyan
